# program-homework-solver

./: .gitignore  BasisPolynomial.cpp  CMakeLists.txt  LagrangePolynomial.cpp  README.md  main.cpp  poly.cpp
include/: BasisPolynomial.h  CodeGenerator.h  LagrangePolynomial.h  poly.h  readme.md  readme.txt
src/: BasisPolynomial.cpp  CodeGenerator.cpp  LagrangePolynomial.cpp  poly.cpp  readme.txt  test.cpp
tests/: CMakeLists.txt  readme.md
tests/src/: test_phs.cpp
